--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       rel="stylesheet"
     />
     <!-- ^=======> Bootstrap Style Sheet -->
-    <link rel="stylesheet" href="./CSS/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <!-- ^=======> Bootstrap Icos -->
-    <link rel="stylesheet" href="./CSS/bootstrap-icons.css" />
+    <link rel="stylesheet" href="./css/bootstrap-icons.css" />
     <!-- ^=======> Font awesome library -->
-    <link rel="stylesheet" href="./CSS/all.min.css" />
+    <link rel="stylesheet" href="./css/all.min.css" />
     <!-- ^=======> Main Style sheet -->
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
@@ -243,7 +243,7 @@
       </nav>
     </footer>
 
-    <script src="./JS/bootstrap.bundle.min.js"></script>
+    <script src="./js/bootstrap.bundle.min.js"></script>
     <!-- ^=======> Font awesome library -->
     <script
       src="https://kit.fontawesome.com/ce3048c406.js"
