--- a/index.html
+++ b/index.html
@@ -78,17 +78,18 @@
           class="text-white bg-dark bg-gradient form-control border-0 bg-dark w-75 rounded-pill"
           placeholder="Find your location ..."
           id="searchInput"
-
         />
+        
+
         <button
           class="btn btn-info px-5 rounded-pill"
           type="button"
           id="searchbtn"
-          
         >
           Find
         </button>
       </form>
+      <p id = "invalidmsg" class="btn btn-danger m-auto p-2 w-50 d-none text-center"> invalid City Name</p>
       <div
         class="container p-5 d-flex justify-content-center align-content-center"
       >
